--- a/app/src/main/res/layout/view_note.xml
+++ b/app/src/main/res/layout/view_note.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -19,7 +19,8 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/favorite_toggle_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/note_text"
