--- a/app/src/main/res/layout/view_note.xml
+++ b/app/src/main/res/layout/view_note.xml
@@ -1,79 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.appcompat.widget.LinearLayoutCompat
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
 
-    <TextView
-        android:id="@+id/note_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="12dp"
-        android:ellipsize="end"
-        android:hint="@string/note_title_hint"
-        android:maxLines="1"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/favorite_toggle_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/note_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-
-        android:ellipsize="end"
-        android:hint="@string/note_hint"
-        android:importantForAutofill="no"
-        android:maxLines="1"
-        app:layout_constraintEnd_toStartOf="@+id/note_date"
-        app:layout_constraintStart_toStartOf="@+id/note_title"
-        app:layout_constraintTop_toBottomOf="@+id/note_title" />
-
-    <TextView
-        android:id="@+id/note_date"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:layout_marginEnd="10dp"
-        android:hint="@string/sample_time"
-        android:importantForAutofill="no"
-        android:maxLines="1"
-
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintStart_toStartOf="@+id/favorite_toggle_button"
-        app:layout_constraintTop_toBottomOf="@+id/favorite_toggle_button" />
-
-    <ToggleButton
-        android:id="@+id/favorite_toggle_button"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/ic_unchecked_star"
-        android:textOff=""
-        android:textOn=""
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintEnd_toEndOf="@+id/note_text"
-        app:layout_constraintStart_toStartOf="@+id/note_text"
-        app:layout_constraintTop_toBottomOf="@+id/note_text"
-        android:layout_marginTop="12dp"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/note_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:ellipsize="end"
+            android:hint="@string/note_title_hint"
+            android:maxLines="1"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/favorite_toggle_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/note_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+
+            android:ellipsize="end"
+            android:hint="@string/note_hint"
+            android:importantForAutofill="no"
+            android:maxLines="1"
+            app:layout_constraintEnd_toStartOf="@+id/note_date"
+            app:layout_constraintStart_toStartOf="@+id/note_title"
+            app:layout_constraintTop_toBottomOf="@+id/note_title" />
+
+        <TextView
+            android:id="@+id/note_date"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:ellipsize="end"
+            android:hint="@string/sample_time"
+            android:importantForAutofill="no"
+            android:maxLines="1"
+
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:layout_constraintStart_toStartOf="@+id/favorite_toggle_button"
+            app:layout_constraintTop_toBottomOf="@+id/favorite_toggle_button" />
+
+        <ToggleButton
+            android:id="@+id/favorite_toggle_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/ic_unchecked_star"
+            android:textOff=""
+            android:textOn=""
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="12dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="@+id/note_text"
+            app:layout_constraintStart_toStartOf="@+id/note_text"
+            app:layout_constraintTop_toBottomOf="@+id/note_text" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
