--- a/app/src/main/res/layout/view_note.xml
+++ b/app/src/main/res/layout/view_note.xml
@@ -6,6 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/view_note_layout"
+    android:layout_margin="8dp"
+    android:elevation="2dp"
+    android:background="@color/colorPrimary"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
+            android:textColor="#000000"
             android:ellipsize="end"
             android:hint="@string/note_title_hint"
             android:maxLines="1"
@@ -34,6 +38,7 @@
             android:id="@+id/note_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:layout_marginStart="12dp"
 
             android:ellipsize="end"
