Basic Room stuff

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,7 @@
             app:destination="@id/MainFragment" />
         <argument
             android:name="note"
-            app:argType="tideware.app.tidenote.model.Note"
+            app:argType="tideware.app.tidenote.data.model.Note"
             app:nullable="true"
             android:defaultValue="@null" />
     </fragment>
