--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_delete"
+        android:id="@+id/action_delete_all"
         android:orderInCategory="100"
         android:title="@string/delete_all_notes"
         app:showAsAction="never" />
