--- a/app/src/main/res/layout/fragment_create_edit.xml
+++ b/app/src/main/res/layout/fragment_create_edit.xml
@@ -34,18 +34,19 @@
             android:id="@+id/note_title_edit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:hint="@string/note_title_hint"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:maxLength="28"
             android:maxLines="1"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/favorite_toggle_button_edit"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:maxLength="28"
-            android:importantForAutofill="no"
-            android:inputType="text" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ToggleButton
             android:id="@+id/favorite_toggle_button_edit"
@@ -55,7 +56,7 @@
             android:layout_centerVertical="true"
 
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="@dimen/favorite_time_margin"
             android:background="@drawable/ic_unchecked_star"
             android:textOff=""
             android:textOn=""
@@ -65,13 +66,15 @@
 
         <TextView
             android:id="@+id/note_date_edit"
-            android:layout_width="30dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/favorite_time_margin"
             android:ellipsize="end"
-            android:layout_marginEnd="10dp"
             android:hint="@string/sample_time"
             android:importantForAutofill="no"
+            android:textAlignment="center"
             android:maxLines="1"
+            android:textSize="10sp"
 
             app:layout_constraintEnd_toEndOf="parent"
 
