--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,12 @@
         android:orderInCategory="100"
         android:title="@string/delete_all_notes"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_search"
+        android:title="search"
+        android:icon="@drawable/ic_search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always|collapseActionView"
+        />
+
 </menu>
