--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,9 +4,14 @@
     tools:context="tideware.app.tidenote.MainActivity">
 
     <item
-        android:id="@+id/action_delete_all"
+    android:id="@+id/action_delete_all"
+    android:orderInCategory="100"
+    android:title="@string/delete_all_notes"
+    app:showAsAction="never" />
+    <item
+        android:id="@+id/action_about"
         android:orderInCategory="100"
-        android:title="@string/delete_all_notes"
+        android:title="@string/about_text"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_search"
